# desktop-app-codex

./: .env.example  ARCHITECTURE.md  ENTERPRISE_RELEASE_PACKAGING.md  LIQUIBASE_MIGRATION_PLAN.md  README.md  RELEASE_CHECKLIST.md  SETTINGS_AND_FEATURE_FLAGS_DESIGN.md  TEST_STRATEGY_AUTH_AUTHZ_ADMIN.md  UX_ADMIN_GUIDELINES.md  desktop_app.db  pyproject.toml  temp_store_scope_test.db
backups/: desktop_app_20260412_160413.db  desktop_app_20260421_224917_before_superadmin_only_reset.db
liquibase/changelog/: db.changelog-master.xml
src/app/: main.py
src/app/admin/: __init__.py  services.py
src/app/auth/: __init__.py  dtos.py  in_memory.py  repositories.py  services.py  sqlalchemy.py
src/app/authorization/: __init__.py  dtos.py  in_memory.py  managed.py  repositories.py  services.py
src/app/bootstrap/: container.py  startup.py
src/app/desktop_shell/: i18n.py
src/app/desktop_shell/ui/: action_logging.py  admin_management.py  main_window.py  manager_customer.py  manager_orders.py  manager_work.py
src/app/operations/: __init__.py  services.py
src/app/platform/audit/: __init__.py  dtos.py  in_memory.py  repositories.py  services.py
src/app/platform/config/: settings.py
src/app/platform/db/: session.py
src/app/platform/liquibase/: runner.py
src/app/platform/logging/: context.py  setup.py
src/desktop_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_admin_manager_language.py  test_audit_pipeline.py  test_auth_service.py  test_authorization_services.py  test_operations_manager_dashboard.py  test_settings.py  test_store_staff_roles.py
(+2 files in other folders)
