[project]
name = "desktop-app"
version = "0.1.0"
description = "Desktop application scaffold with PySide6, SQLAlchemy, and Liquibase startup orchestration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PySide6>=6.7.0",
  "SQLAlchemy>=2.0.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.5.0",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
